2007-06-02  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-06-01  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-06-01  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-05-24  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-05-18  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-05-18  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-05-15  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-05-01  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-04-22  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-04-19  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-04-17  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-04-15 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Christine.py.in:
		- dBus Disabled.
2007-04-09  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-04-09  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-04-07 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Christine.py.in:
		- Finished the import and initialization of dbus
		- Fixed a bug in window.set_icon bug.
		Was setting a path instead a gtk.gdk.Pixbuf
	* gui/MenuTrayIcon.glade:
		- Fixed some callbacks name.
	* libchirstine/Makefile.am:
		- Added ChristineGConfi to the scripts_DATA variable
	* libchristine/About.py.in, 
	  libchristine/Preferences.py:
		- Fixed a bug in window.set_icon bug.
		Was setting a path instead a gtk.gdk.Pixbuf
	* libchrstine/Share.py.in:
		- Fixed a bug in Share.getImage method,